# simple_store_services

./: Cargo.toml
src/: main.rs
src/inner/: mod.rs
src/inner/controllers/: mod.rs  product_controller.rs  sells_controller.rs
src/inner/services/: mod.rs  product_service.rs  sales_services.rs
src/inner/structures/: mod.rs  service_structure.rs
src/outer/database/: connection.rs
src/outer/security/: jwt_checker.rs  jwt_middleware.rs
